// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[glob] basic case: defineMessages -> stdout 1`] = `
Array [
  Object {
    "defaultMessage": "ignore",
    "id": "ignore",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
]
`;

exports[`basic case: defineMessages -> out-file 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
]
`;

exports[`basic case: defineMessages -> out-file with location 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "end": 246,
    "file": "defineMessages/actual.js",
    "id": "foo.bar.baz",
    "start": 141,
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "end": 360,
    "file": "defineMessages/actual.js",
    "id": "foo.bar.biff",
    "start": 258,
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "end": 522,
    "file": "defineMessages/actual.js",
    "id": "app.home.kittens",
    "start": 372,
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "end": 650,
    "file": "defineMessages/actual.js",
    "id": "trailing.ws",
    "start": 545,
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "end": 786,
    "file": "defineMessages/actual.js",
    "id": "escaped.apostrophe",
    "start": 662,
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "end": 937,
    "file": "defineMessages/actual.js",
    "id": "ae494",
    "start": 876,
  },
]
`;

exports[`basic case: defineMessages -> stdout 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
]
`;

exports[`basic case: help 1`] = `
"Usage: formatjs extract [options] [files...]

Extract string messages from React components that use react-intl.
The input language is expected to be TypeScript or ES2017 with JSX.

Options:
  --out-file <path>                                     The target file path where the plugin will output an aggregated \`.json\` file of allthe translations from the \`files\` supplied.
  This flag will ignore --messages-dir
  --id-interpolation-pattern <pattern>                  If certain message descriptors don't have id, this \`pattern\` will be used to automaticallygenerate IDs for them. Default to \`[contenthash:5]\`.
  See https://github.com/webpack/loader-utils#interpolatename for sample patterns (default: \\"[contenthash:5]\\")
  --extract-source-location                             Whether the metadata about the location of the message in the source file should be extracted. If \`true\`, then \`file\`, \`start\`, and \`end\` fields will exist for each extracted message descriptors. (default: false)
  --remove-default-message                              Remove \`defaultMessage\` field in generated js after extraction (default: false)
  --additional-component-names <comma-separated-names>  Additional component names to extract messages from, e.g: \`['FormattedFooBarMessage']\`. **NOTE**: By default we check for the fact that \`FormattedMessage\` is imported from \`moduleSourceName\` to make sure variable alias works. This option does not do that so it's less safe.
  --extract-from-format-message-call                    Opt-in to extract from \`intl.formatMessage\` call with the same restrictions, e.g: has to be called with object literal such as \`intl.formatMessage({ id: 'foo', defaultMessage: 'bar', description: 'baz'})\` (default: true)
  --output-empty-json                                   Output file with empty [] if src has no messages. For build systems like bazel that relies on specific output mapping, not writing out a file can cause issues. (default: false)
  --ignore <files>                                      List of glob paths to **not** extract translations from.
  --throws                                              Whether to throw an exception when we fail to process any file in the batch.
  --pragma <pragma>                                     parse specific additional custom pragma. This allows you to tag certain file with metadata such as \`project\`. For example with this file:
  
        \`\`\`
        // @intl-meta project:my-custom-project
        import {FormattedMessage} from 'react-intl';
  
        <FormattedMessage defaultMessage=\\"foo\\" id=\\"bar\\" />;
        \`\`\`
  
        and with option \`{pragma: \\"@intl-meta\\"}\`, we'll parse out \`// @intl-meta project:my-custom-project\` into \`{project: 'my-custom-project'}\` in the result file.
  -h, --help                                            display help for command
"
`;

exports[`duplicated descriptor ids shows warning 1`] = `
Array [
  Object {
    "defaultMessage": "Bar",
    "id": "foo",
  },
]
`;

exports[`ignore -> stdout JS 1`] = `
Array [
  Object {
    "defaultMessage": "ignore",
    "id": "ignore",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
]
`;

exports[`ignore -> stdout TS 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
  Object {
    "defaultMessage": "No Desc",
    "id": "c63ed",
  },
  Object {
    "defaultMessage": "formatted message",
    "description": "foo",
    "id": "inline",
  },
]
`;

exports[`typescript -> stdout 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
  Object {
    "defaultMessage": "No ID",
    "description": "no ID",
    "id": "ae494",
  },
  Object {
    "defaultMessage": "No Desc",
    "id": "c63ed",
  },
  Object {
    "defaultMessage": "formatted message",
    "description": "foo",
    "id": "inline",
  },
]
`;
